--- a/src/style/common.less
+++ b/src/style/common.less
@@ -1,1 +1,53 @@
 @themeColor: #f00;
+//清除浮动
+.clear:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.s1200 {
+  width: 1200px;
+  margin: 0 auto;
+}
+// 左侧图标背景
+.iconBg(@value) {
+  background: url("~@/assets/img/@{value}.png") left center no-repeat;
+}
+
+// 居中图标背景
+.iconCenter(@value) {
+  background: url("~@/assets/img/@{value}.png") center center no-repeat;
+}
+// 文字超出部分省略号（省略号一行）
+.ellipsis1 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+// 省略号
+.ellipsis(@lineNum: 1) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: @lineNum;
+  -webkit-box-orient: vertical;
+  word-break: break-all;
+}
+
+@font-face {
+  font-family: 'iconfont';
+  src: url('~@/assets/font/iconfont.eot');
+  src: url('~@/assets/font/iconfont.eot?#iefix') format('embedded-opentype'),
+      url('~@/assets/font/iconfont.woff2') format('woff2'),
+      url('~@/assets/font/iconfont.woff') format('woff'),
+      url('~@/assets/font/iconfont.ttf') format('truetype'),
+      url('~@/assets/font/iconfont.svg#iconfont') format('svg');
+}
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
